--- a/client/admin/src/mealorder/components/purchase-order/purchase-order.html
+++ b/client/admin/src/mealorder/components/purchase-order/purchase-order.html
@@ -141,6 +141,17 @@
                     width: 33.3%;
                 }
             }
+            @media only screen and (max-width: 414px) {
+                .vendor-name {
+                    width: 40%;
+                }
+                .date {
+                    width: 30%;
+                }
+                .status {
+                    width: 40%;
+                }
+            }
 
         </style>
 
