--- a/client/admin/src/mealorder/components/vendor-orders.html
+++ b/client/admin/src/mealorder/components/vendor-orders.html
@@ -150,6 +150,11 @@
                 }
 
             }
+            @media only screen and (max-width: 414px) {
+                .header-title {
+                    display: none;
+                }
+            }
 
         </style>
 
