--- a/client/admin/src/mealorder/components/purchase-order/purchase-order.html
+++ b/client/admin/src/mealorder/components/purchase-order/purchase-order.html
@@ -196,7 +196,7 @@
                 static get properties() {
                     return {
                         currentOrders: {
-                            type: Array,
+                            type: Object,
                         },
                         routeData: {
                             type: Object,
