--- a/client/admin/src/mealorder/components/vendor-orders.html
+++ b/client/admin/src/mealorder/components/vendor-orders.html
@@ -212,7 +212,7 @@
                                 auto-update-date="true"
                                 locale="ru-RU"></app-datepicker>
                 <purchase-order route-data=[[routeData]]
-                                current-orders="[[displayedOrders]]"></purchase-order>
+                                current-orders="[[currentPurchaseOrders]]"></purchase-order>
             </div>
 
             <purchase-order-details-container route="{{subroute}}" vendor-data="[[route]]"
@@ -241,13 +241,9 @@
                             type: String,
                         },
 
-                        // _previousDay: {
-                        //     type: Object,
-                        //     computed: '_getPreviousDay(currentDate)'
-                        // },
-                        purchaseOrders: {
+                        currentPurchaseOrders: {
                             type: Array,
-                            statePath: 'purchaseOrders',
+                            statePath: 'currentPurchaseOrders',
                         },
                         selectedDay: {
                             type: String,
@@ -257,10 +253,10 @@
 
                 static get actions() {
                     return {
-                        getSelectedOrders: function (startDate, endDate) {
+                        getSelectedOrders: function (date) {
                             return {
                                 type: MealOrderAdminApp.AdminActions.GET_SELECTED_ORDERS,
-                                startDate, endDate
+                                date
                             }
                         }
                     }
@@ -283,14 +279,6 @@
                     this._pageChanged();
                 }
 
-                _getPreviousDay() {
-                    const newDate = new Date(this.currentDate);
-                    newDate.setDate(newDate.getDate() - 1);
-                    const DATE_LENGTH = 10;
-                    console.log("@!@!@");
-                    return newDate.toISOString().slice(0, DATE_LENGTH);
-                }
-
                 _getDay(date) {
                     return date.getDate();
                 }
@@ -305,17 +293,9 @@
                     return dayOfTheWeek.charAt(0).toUpperCase() + dayOfTheWeek.slice(1);
                 }
 
-                _getDisplayedOrder() {
-                    const purchaseOrders = this.purchaseOrders;
-                    if (purchaseOrders) {
-                        return purchaseOrders.filter(order => order.date.getTime() === new Date(this.routeData.date).getTime());
-                    }
-                }
-
                 _calendarDateChanged(e) {
                     const currentDate = e.target.date;
                     if (this.routeData.date && !this.routeData.vendor) {
-                        this.dispatch('getSelectedOrders',);
                         this.set('route.path', '/order/' + currentDate + "/");
                         this.$.picker.style = 'display:none;';
                         this.$.calendar.style.backgroundColor = 'white';
@@ -323,17 +303,10 @@
                 }
 
                 _pageChanged() {
-                    console.log('1');
-
                     if (!this.routeData.date) {
-                        console.log("!!!");
                         const DATE_LENGTH = 10;
                         const date = this.serverTime.toISOString().slice(0, DATE_LENGTH);
                         this.set('inputDate', date);
-                        // const DAYS_IN_PERIOD = 8;
-                        // const startDate = new Date(this.serverTime);
-                        // startDate.setDate(startDate.getDate() - (DAYS_IN_PERIOD - 1));
-                        // this.dispatch('getSelectedOrders', startDate, new Date(this.serverTime));
                         this.set('route.path', '/order/' + date + "/");
                     }
                     else {
@@ -342,6 +315,7 @@
                         this.$.ptab.select(1);
                         this.set('route.path', '/order/' + date + "/");
                     }
+                    this.dispatch('getSelectedOrders', this.routeData.date);
                 }
 
                 openDatePicker() {
